# robocup_client

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml
examples/: client.cpp
include/robocup_client/: message_handler.hpp  robocup_client.hpp  robot_client.hpp
include/robocup_client/communication/: communication.hpp
include/robocup_client/communication/_socket/: tcp_socket.hpp
include/robocup_client/communication/socket/: base_socket.hpp  tcp_socket.hpp
include/robocup_client/communication/tcp/: client.hpp  receiver.hpp  sender.hpp
include/robocup_client/message_handler/: message_handler.hpp
include/robocup_client/node/: robocup_client_node.hpp
include/robocup_client/receiver/: receiver.hpp
include/robocup_client/receiver/node/: receiver.hpp  receiver_node.hpp
include/robocup_client/robot_client/: receiver.hpp  robot_client.hpp  sender.hpp
include/robocup_client/sender/: sender.hpp
include/robocup_client/sender/node/: sender.hpp  sender_node.hpp
include/webots_client/: message_handler.hpp  robot_client.hpp  webots_client.hpp
include/webots_controller/: message_controller.hpp  webots_client.hpp
src/: coba.cpp  message_controller.cpp
src/robocup_client/: message_handler.cpp  robot_client.cpp
src/robocup_client/communication/_socket/: base_socket.cpp
src/robocup_client/communication/socket/: base_socket.cpp  tcp_socket.cpp
src/robocup_client/communication/tcp/: client.cpp  receiver.cpp  sender.cpp
src/robocup_client/message_handler/: message_handler.cpp
src/robocup_client/node/: robocup_client_node.cpp
src/robocup_client/receiver/node/: receiver.cpp  receiver_node.cpp
src/robocup_client/robot_client/: receiver.cpp  robot_client.cpp  sender.cpp
src/robocup_client/sender/node/: sender.cpp  sender_node.cpp
src/webots_client/: message_handler.cpp  robot_client.cpp
